--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             id="city-input" class="form-control" />
                     </div>
                     <div class="col-3">
-                        <input type="submit" value="Search" class="form-control btn btn-primary" />
+                        <input type="submit" value="Search" class="form-control btn btn-primary"/>
                     </div>
                     <div class="col-2">
                         <button class="btn btn-success shadow-sm w-100" id="current-location-button">
@@ -34,12 +34,17 @@
                 </div>
             </form>
             <h1 id="city">
-                <i class="fas fa-map-marker-alt"></i>
             </h1>
             <h2 id="date">
             </h2>
             <h3 id="description">
             </h3>
+            <div class="row justify-content-center current-weather-icon">  
+                <img 
+                src=""
+                id="current-weather-icon"
+                />
+            </div>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <span class="temperature" id="temperature">19</span>
@@ -58,15 +63,15 @@
                     </div>
                 </div>
             </div>
-            </div>
+            <h4>
+                3-hour Forecast
+            </h4>
             <div class="row weather-forecast" id="forecast">
-                    <div class="col-2">
-                    <h2>
-                    </h2>
-                    </div>
+            </div>
                 <hr>
-                <div class="update-time">
+                <div class="update-time" id="last-updated">
                 </div>
+            </div>
             </div>
         </div>
     </div>
